# rusty-ray-tracer

./: Cargo.toml  README.md
src/: book1_random_scene.rs  main.rs  raytracer.rs
src/raytracer/: camera.rs  material.rs  ray.rs  shape.rs  utils.rs
